fix: pass release body as environment variable to prevent accidental code execution in changelog generation

--- a/generate-changelog/action.yml
+++ b/generate-changelog/action.yml
@@ -30,9 +30,11 @@ runs:
     - name: Generate changelog
       id: generate
       shell: bash
+      env:
+        RELEASE_BODY: ${{ inputs.release-body }}
       run: |
         if [[ "${{ inputs.is-manual-release }}" == "true" ]]; then
-          CONTENT="${{ inputs.release-body }}"
+          CONTENT="$RELEASE_BODY"
         else
           LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           if [[ -n "$LAST_TAG" ]]; then
