fix: also pass changelog and additional sections as environment variables to workflow summary

--- a/workflow-summary/action.yml
+++ b/workflow-summary/action.yml
@@ -66,6 +66,9 @@ runs:
   steps:
     - name: Generate Summary
       shell: bash
+      env:
+        CHANGELOG: ${{ inputs.changelog }}
+        ADDITIONAL_SECTIONS: ${{ inputs.additional-sections }}
       run: |
         echo "## Build & Publish Summary" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
@@ -123,19 +126,19 @@ runs:
         fi
 
         # --- Additional Sections ---
-        if [[ -n "${{ inputs.additional-sections }}" ]]; then
-          echo "${{ inputs.additional-sections }}" >> $GITHUB_STEP_SUMMARY
+        if [[ -n "$ADDITIONAL_SECTIONS" ]]; then
+          echo "$ADDITIONAL_SECTIONS" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
         fi
 
         # --- Changelog ---
-        if [[ -n "${{ inputs.changelog }}" ]]; then
+        if [[ -n $CHANGELOG ]]; then
           echo "### Changelog" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "<details>" >> $GITHUB_STEP_SUMMARY
           echo "<summary>Click to expand</summary>" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "${{ inputs.changelog }}" >> $GITHUB_STEP_SUMMARY
+          echo "$CHANGELOG" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "</details>" >> $GITHUB_STEP_SUMMARY
         fi
